[package]
name = "rlogout"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
gtk4-layer-shell = "0.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.118", features = ["std"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
package = "gtk4"
version = "0.8.2"
features = ["v4_14"]
